configmap2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-deployment
  namespace: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
      - name: springboot
        image: silversabon/marwasabon_java_apps:latest
        ports:
        - containerPort: 8030
        volumeMounts:
        - name: config-volume
          mountPath: /configs/
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: example-config
